# koketria-game

./: .gitignore  AGENTS.md  progress.md  session.txt
backend/: Dockerfile.prod  index.js
docker/: AGENTS.md  Caddyfile  README.md  docker-compose.prod.yml  docker-compose.yml  nginx.prod.conf
front/: Dockerfile.prod  index.html  nginx.conf  package-lock.json  package.json
front/src/: main.js  style.css
game1/backend/: AGENTS.md  Dockerfile.prod  index.js  package-lock.json  package.json
game1/backend/src/: app.js
game1/backend/src/config/: env.js
game1/backend/src/models/: userModel.js
game1/backend/src/plugins/: auth.js  db.js
game1/backend/src/routes/health/: index.js
game1/backend/src/routes/users/: controller.js  index.js  schema.js
game1/backend/src/services/: userService.js
game1/backend/src/utils/: logger.js
game1/backend_v2/: Cargo.toml  Dockerfile.dev  Dockerfile.prod  README.md
game1/backend_v2/contract/golden/: core_flow.json
game1/backend_v2/docs/: protocol-contract.md
game1/backend_v2/scripts/: dev-run.sh  run_ws_load_matrix.sh
game1/backend_v2/src/: main.rs  rooms.rs  ws_rooms.rs
game1/docs/: competitive-boundary-checklist.md  competitive-boundary-plan.md
game1/front/: AGENTS.md  Dockerfile.prod  README.md  config.html  index.html  map.html  nginx.conf  package.json  vite.config.js
game1/front/public/: manifest.webmanifest  sw.js
game1/front/src/: config.js  main.js  map.js  style.css
scripts/: wgtest.sh
web/: index.html  manifest.webmanifest  nginx.conf  styles.css  sw.js
